--- a/index.html
+++ b/index.html
@@ -1,135 +1,33 @@
 <!DOCTYPE html>
- <html lang="en">
-  <head>
-   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-       <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
- <title>Frontend Mentor | Stats preview card component</title>
-    <!--CSS code-->
-       <style> 
-    :root {
---Very-dark-blue (main background): hsl(233, 47%, 7%);
---Dark-desaturated-blue (card background): hsl(244, 38%, 16%);
---Soft-violet (accent): hsl(277, 64%, 61%);
---White (main heading, stats): hsl(0, 0%, 100%);
---Slightly-transparent-white (main paragraph): hsla(0, 0%, 100%, 0.75);
---Slightly-transparent-white (stat headings): hsla(0, 0%, 100%, 0.6);
-    }
-    body {
-      padding: 1em;   
-      padding-top: 100px;
-      padding-bottom: 100px;
-      padding-left: 1em;
-      padding-right: 1em;
-      display: grid;
-      place-content: center;
-      place-items: center;
-      background-color: hsl(233, 47%, 7%);
-    } 
-         * {
-           font-family: 'inter', sans-serif;
-         }
-    .Component-card {
-      display: grid;
-      grid-template-columns: repeat(1, 2fr);
-      background-color: hsl(244, 30%, 10%);
-      border-radius: 1rem;
-      overflow: hidden;
-      }
-    .content {
-      color: hsla(0, 0%, 100%, 0.75);
-      padding: 1em;
-      gap: 0;
-      margin: 0;
-    }
-    h2 {
-      font-family: 'Inter', sans-serif; 
-      color:  hsl(0, 0%, 100%);
-    } 
-    .accent {
-      color: hsl(277, 64%, 61%);
-    }
-    .picture {
-      grid-row: 1/1; 
-      grid-column: 2/2;
-      }
-    .picture img {
-      color: hsl(277, 64%, 61%);
-    } 
-    ul {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    li {
-      font-family: 'Lexend Deca', sans-serif;
-      display: grid;
-      list-style-type: none;
-      color: hsla(0, 0%, 100%, 0.6); 
-      text-transform: uppercase;
-    }
-    strong { 
-      font-family: 'inter', sans-serif;
-      text-transform: lowercase;
-      color: hsl(0, 0%, 100%);
-    }
-         .uppercase {
-         text-transform: uppercase;
-         }
-    .attribution h4, p, a {
-      text-decoration: none;
-      text-transform: none;
-      text-decoration-style: none;
-     color: hsl(0, 0%, 100%);
-    }
-    .attribution { 
-      font-size: 11px; 
-      text-align: center; 
-    }
-    
-    @media (width < 768px) { 
-      .Component-card {
-        display: grid;
-    width: 50%; 
-    height: 50%;
-  }
-    }
-    @media (width >= 768px) {
-    .Component-card {
-    width: 100%; 
-    height: 100%;
-  }
-    }
-      </style>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Stats preview card component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
+</head>
 <body>
-  <!-- Components -->
-   <div class="Component-card">
-     <div class="picture">
-      <img src="image-header-mobile.jpg" alt="image of people working">
-        </div>
-     <!-- Content -->
-        <div class="content">  
-          <h2>Get <a class="accent">insights</a> that help your business grow.</h2>
-            <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-        </div>
-  <!-- Stats -->
-  <ul>
-    <li><strong>10k+</strong> companies</li>
-  <li><strong>314</strong> templates</li>
-<li><strong class="uppercase">12m+</strong> queries</li>
-   </ul>
-       </div>
-  <!-- Attributes -->
-  <footer class="attribution">
-    <h4>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</h4>
-       <p>Coded by <a href="#">Tahsin</a></p>
-  </footer>
- </body>
+
+  Get insights that help your business grow.
+
+  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency.
+
+  10k+ companies
+  314 templates
+  12m+ queries
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
+</body>
 </html>
